# fastapi-base-project

./: .env  pyproject.toml
app/: main.py
app/api/v1/: auth.py  users.py  workspace.py
app/auth/domain/: token_model.py
app/auth/infraestructure/: utils.py
app/kernel/domain/: base_entity.py  base_repository.py
app/kernel/infraestructure/: postgres_database.py
app/users/application/: user_use_cases.py
app/users/domain/: role_model.py  user_model.py
app/users/infraestructure/: user_interface.py  user_schema.py  user_table.py
app/workspaces/application/: workspace_use_cases.py
app/workspaces/domain/: workspace_model.py
app/workspaces/infraestructure/: workspace_interface.py  workspace_schema.py  workspace_table.py
